force-app/main/default/objects/saleswings__Log__c/saleswings__Log__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG{000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>