force-app/main/default/objects/saleswings__Log__c/fields/saleswings__Email__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Email__c</fullName>
    <defaultValue>&quot;salesforceintegrationlogs@saleswingsapp.com&quot;</defaultValue>
    <label>Email</label>
    <type>Email</type>
</CustomField>