force-app/main/default/objects/saleswings__Log__c/fields/saleswings__Message__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>