force-app/main/default/objects/saleswings__Log__c/fields/saleswings__Type__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUTH</fullName>
            </value>
            <value>
                <fullName>ACTION</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>SYNC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>