force-app/main/default/objects/saleswings__Log__c/listViews/saleswings__All.listView-meta.xml
<ListView>
    <fullName>saleswings__All</fullName>
    <columns>NAME</columns>
    <columns>saleswings__Type__c</columns>
    <columns>saleswings__Sub_Type__c</columns>
    <columns>saleswings__Result__c</columns>
    <columns>saleswings__Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>